@@ -17,3 +17,4 @@ depth: 1
 
  * Fix issue where lock/unlock buttons would not work on the Dashboard (home) page or the page index listing via the status sidebar (Stefan Hammer)
  * Fix disabled style on StreamField add button (Matt Westcott)
+ * Ensure models are fully loaded before registering snippets, to avoid circular import issues (Matt Westcott)
