@@ -35,6 +35,7 @@ Changelog
 
  * Fix: Fix issue where lock/unlock buttons would not work on the Dashboard (home) page or the page index listing via the status sidebar (Stefan Hammer)
  * Fix: Fix disabled style on StreamField add button (Matt Westcott)
+ * Fix: Ensure models are fully loaded before registering snippets, to avoid circular import issues (Matt Westcott)
 
 
 4.1 LTS (01.11.2022)
